fix solve with last possible number